# qt_terminal

./: Model.mdj  history.txt  mainwindow.cpp  mainwindow.h  terminaltextedit.cpp  terminaltextedit.h
qt_terminal_tests/: CMakeLists.txt  history.txt
qt_terminal_tests/tests/: CMakeLists.txt  test_terminaltextedit.cpp
